--- a/public/input.css
+++ b/public/input.css
@@ -1,3 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.ct-nav-item {
+    @apply hover:text-gray-800 relative after:absolute after:bottom-[-4px] after:w-0 hover:after:w-full after:h-0.5 after:left-0 after:bg-primary-color after:transition-all after:ease-in-out after:duration-300;
+}
