--- a/public/input.css
+++ b/public/input.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 .ct-nav-item {
-    @apply hover:text-gray-800 relative after:absolute after:bottom-[-4px] after:w-0 hover:after:w-full after:h-0.5 after:left-0 after:bg-primary-color after:transition-all after:ease-in-out after:duration-300;
+    @apply hover:text-gray-800 max-lg:py-2 cursor-pointer relative lg:after:absolute lg:after:bottom-[-4px] lg:after:w-0 hover:lg:after:w-full lg:after:h-0.5 lg:after:left-0 lg:after:bg-primary-color lg:after:transition-all lg:after:ease-in-out lg:after:duration-300;
+}
+.ct-menu-expanded {
+    @apply absolute bg-white bottom-[-200px] z-50 w-full text-center animate-slideDown;
 }
