--- a/public/input.css
+++ b/public/input.css
@@ -8,3 +8,9 @@
 .ct-menu-expanded {
     @apply absolute bg-white bottom-[-200px] z-50 w-full text-center animate-slideDown;
 }
+.ct-sub-heading {
+    @apply my-16 text-center text-xs tracking-widest text-gray-600;
+}
+.ct-before-sub-heading {
+    @apply h-[1.5px] w-8 block bg-gray-200;
+}
