--- a/public/input.css
+++ b/public/input.css
@@ -14,3 +14,21 @@
 .ct-before-sub-heading {
     @apply h-[1.5px] w-8 block bg-gray-200;
 }
+.ct-product-item {
+    @apply text-center relative;
+}
+.ct-product-image {
+    @apply cursor-pointer before:hover:absolute before:hover:left-0 before:hover:right-0 before:hover:top-0 before:hover:bottom-0 before:hover:transition-all before:hover:ease-in-out before:hover:duration-300 before:hover:bg-gray-900 before:hover:opacity-10;
+}
+.ct-product-heading {
+    @apply text-xl hover:text-primary-color cursor-pointer mt-7;
+}
+.ct-product-price {
+    @apply text-gray-600 mt-2;
+}
+.ct-product-btn {
+    @apply hidden absolute text-sm font-medium bottom-[5%] w-[90%] left-0 right-0 mx-auto py-3 bg-white text-black animate-fadeIn;
+}
+.ct-onsale {
+    @apply absolute right-[3%] top-[3%] py-2 px-4 bg-white text-primary-color font-bold;
+}
